k8s/overlays/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-analyzer
spec:
  replicas: 1
